feat: port monorepo enhancements to deployment bundles
Bring local monorepo (spnettec/kura) enhancements over upstream into
this addon repo so the two stay in sync:

- Add Chinese/English externalized strings in OSGI-INF/l10n/ for
  CloudDeploymentHandlerV2 (DeploymentService_{en,zh}.properties) and
  DeploymentAgent (DeploymentAgent_{en,zh}.properties); switch metatype
  XML to %placeholder references and Bundle-Localization wiring.
- Widen Import-Package ranges in core.deployment MANIFEST.MF
  (org.eclipse.kura.configuration up to 3.0; slf4j to [1.7.0,3)) for
  forward compatibility.
- Carry over local Java fixes in CloudDeploymentHandlerOptions,
  Download/Install/Uninstall status enums, HttpDownloadCountingOutputStream,
  DeploymentHookManager, DeploymentPackageInstallOptions, InstallImpl,
  DeploymentAgent, FileMoveDeploymentHookOptions.

Verified: mvn -f bundles/pom.xml clean install builds all 4 bundles
SUCCESS (groovy.lang import in transitively-pulled kura.core resolves
via target-platform-pde-deps).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>